# atomic_habits

./: .envsample  .flake8  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app_habits/: apps.py  models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
app_habits/migrations/: 0001_initial.py  0002_alter_habit_next_send_date.py  0002_alter_habit_options_habit_created_at_and_more.py  0003_alter_habit_next_send_date.py  0003_alter_habit_updated_at.py  0004_habit_reward.py  0005_alter_habit_is_pleasant_alter_habit_is_public_and_more.py
app_user/: models.py  permissions.py  serializers.py  urls.py  views.py
app_user/migrations/: 0001_initial.py
config/: celery.py  settings.py  urls.py
